...
    /* AVEHabit Activity */

    // menu items
    <string name="log_habit_event">Log Event</string>
    <string name="view_habit_stats">See Stats</string>
    <string name="edit_habit_interval">Change Interval</string>
    <string name="save_habit">Save</string>
    <string name="delete_habit">Delete</string>
    <string name="cancel_habit">Cancel</string>
    <string name="pick_habit_start">Choose Start Date</string>

    // Location strings
    <string name="permission_rationale">Without these permissions map features will not work</string>
    <string name="permission_denied_explanation">We need access to your location to enable some features</string>
    <string name="settings">SETTINGS</string>

...
